[hotfix]a bug that prevented the content script from running.
初回読み込み時にコンテンツスクリプトが走らないバグの修正

--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,7 @@
   "content_scripts": [
     {
       "matches": [
-        "*://*.youtube.com/live_chat*",
-        "*://*.youtube.com/watch*"
+        "*://*.youtube.com/*"
       ],
       "js": ["youtube.js"]
     }
